--- a/8-11 js-tasks/task3.html
+++ b/8-11 js-tasks/task3.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <select id="font" onchange="changeFont();">
+    <select id="font" onchange="changeFont()">
         <option value="Arial">Arial</option>
         <option value="Verdana">Verdana</option>
         <option value="Impact">Impact</option>
         <option value="Ms comic sans">MS Comic Sans</option>
     </select>
 
-    <select id="size" onchange="changeFontsize();">
+    <select id="size" onchange="changeFontsize()">
         <option value="20px">20px</option>
         <option value="30px">30px</option>
         <option value="10px">10px</option>
