--- a/9-11 js-tasks/task1.html
+++ b/9-11 js-tasks/task1.html
@@ -42,7 +42,7 @@
 </div><br><br>
     <div class="div1">
   <label for="age">Your Age :</label>
-  <input type="text" id="age" name="age"  placeholder="Your Age">
+  <input type="number" id="age" name="age"  placeholder="Your Age">
 </div>
 <h3>Select Your Gender</h3>
 <div id="div2">
